syntax = "proto3";

package book;

service BookService {
    rpc Index (IndexRequest) returns (IndexResponse) {}
    rpc Get (GetRequest) returns (GetResponse) {}
    rpc Add (AddRequest) returns (AddResponse) {}
    rpc Update (UpdateRequest) returns (UpdateResponse) {}
    rpc Delete (DeleteRequest) returns (DeleteResponse) {}
}

message IndexRequest {}

message GetRequest {
    string id = 1;
}

message AddRequest {
    string title = 1;
    string name = 2;
    int32 year = 3;
    string phone = 4;
    string address = 5;
}

message UpdateRequest {
    string id = 1;
    string title = 2;
    string name = 3;
    int32 year = 4;
    string phone = 5;
    string address = 6;
}

message DeleteRequest {
    string id = 1;
}

message IndexResponse {
    string message = 1;
    repeated Book books = 2;
}

message GetResponse {
    string message = 1;
    Book book = 2;
}

message AddResponse {
    string message = 1;
    Book book = 2;
}

message UpdateResponse {
    string message = 1;
    Book book = 2;
}

message DeleteResponse {
    string message = 1;
}

message Book {
    string id = 1;
    string title = 2;
    int32 year = 3;
    Author author = 4;
}

message Author {
    string name = 1;
    string phone = 2;
    string address = 3;
}